# SupermarketReceipt-Refactoring-Kata

./: .editorconfig  .gitignore  0001-pick-1.patch  0001-pick-2.patch  0001-pick-3.patch  0001-pick-4.patch  0001-pick-5.patch  0001-pick-6.patch  Directory.Build.props  README.md  license.txt  maintenancesuggestions.md  pick1.patch  pick2.patch  pick3.patch  pick4.patch  pick5.patch  pick6.patch  refactor-plan.md
.github/workflows/: cmake-multi-platform.yml
c/: CMakeLists.txt  README.md
c/src/: CMakeLists.txt  printer.c  printer.h  supermarket.c  supermarket.h
c/test-catch2/: CMakeLists.txt  sample_catch.cpp  supermarket_catch.Supermarket.5_for_y_discount.approved.txt  supermarket_catch.cpp  (+14 more)
ci/: coverage-report.ps1  linting.ps1
common-lisp/: README.md  supermarket-receipt.asd
cpp/: .gitignore  CMakeLists.txt  README.md  ReceiptPrinter.cpp  ReceiptPrinter.h
cpp/model/: CMakeLists.txt  Discount.h  Product.cpp  Product.h  ProductQuantity.cpp  ProductUnit.h  Receipt.cpp  Receipt.h  ReceiptItem.cpp  ReceiptItem.h  ReceiptPrinter.cpp  ReceiptPrinter.h  ShoppingCart.cpp  SpecialOfferType.h  Teller.cpp
cpp/src/: CMakeLists.txt  Discount.cpp  FakeCatalog.cpp  FakeCatalog.h  Offer.cpp  Offer.h  Product.cpp  Product.h  ProductQuantity.h  Receipt.h  ReceiptItem.cpp  ReceiptItem.h  ReceiptPrinter.cpp  ShoppingCart.cpp  ShoppingCart.h  SupermarketCatalog.h  Teller.h  sample.cpp  sample.h
cpp/test/: CMakeLists.txt  FakeCatalog.h  SuperMarketTest.Discounts.5_for_y_discount.approved.txt  SuperMarketTest.Discounts.5_for_y_discount_with_16.approved.txt  SuperMarketTest.Discounts.5_for_y_discount_with_6.approved.txt  SuperMarketTest.Discounts.One_normal_item.approved.txt  SuperMarketTest.Discounts.Two_normal_items.approved.txt  SuperMarketTest.Discounts.buy_five_get_one_free.approved.txt  SuperMarketTest.Discounts.percent_discount.approved.txt  SuperMarketTest.Discounts.x_for_y_discount.approved.txt  SuperMarketTest.cpp  main.cpp
cpp/test-catch2/: CMakeLists.txt  SuperMarketTest.cpp  sample_catch.Discounts.5_for_y_discount_with_16.approved.txt  sample_catch.Discounts.Loose_weight_product.approved.txt  sample_catch.cpp
cpp/test-doctest/: CMakeLists.txt  sample_doctest.Discounts.5_for_y_discount_with_6.approved.txt  sample_doctest.Discounts.buy_two_get_one_free.approved.txt  sample_doctest.cpp
cpp/test-gtest/: CMakeLists.txt  sample_gtest-backup.cpp  sample_gtest.SupermarketTest.PercentDiscount.approved.txt  sample_gtest.SupermarketTest.TenPercentDiscount.approved.txt  sample_gtest.SupermarketTest.XForYDiscountButInsufficientInBasket.approved.txt  sample_gtest.cpp
csharp/: .gitignore  AGENTS.md  Discount.cs  FakeCatalog.cs  Offer.cs  Product.cs  ProductQuantity.cs  ProductUnit.cs  README.md  Readme.md  Receipt.cs  ReceiptItem.cs  ReceiptPrinter.cs  ReceiptPrinterTest.cs  ReceiptPrinterTest.looseWeight.approved.txt  ReceiptPrinterTest.looseWeight.verified.txt  ReceiptPrinterTest.oneLineItem.approved.txt  ReceiptPrinterTest.printWholeReceipt.verified.txt  ReceiptPrinterTest.quantityTwo.approved.txt  ReceiptPrinterTest.total.approved.txt  ShoppingCart.cs  SpecialOfferType.cs  SupermarketCatalog.cs  SupermarketReceipt.sln  SupermarketTest.FiveForY_discount.approved.txt  SupermarketTest.FiveForY_discount_withFour.approved.txt  SupermarketTest.FiveForY_discount_withSix.approved.txt  SupermarketTest.FiveForY_discount_withSixteen.approved.txt  SupermarketTest.buy_five_get_one_free.approved.txt  SupermarketTest.cs  SupermarketTest.loose_weight_product.approved.txt  SupermarketTest.percent_discount.approved.txt  SupermarketTest.percent_discount.verified.txt  SupermarketTest.two_normal_items.verified.txt  SupermarketTest.xForY_discount.approved.txt  Teller.cs  packages.config  supermarket.csproj  supermarket.sln
csharp-ms/: SupermarketReceipt.sln
dart/: README.md
elixir/: .formatter.exs  .gitignore  README-elixir.md  README.md  mix.exs
go/: README.md  go.mod  go.sum
java/: pom.xml
kotlin/: build.gradle  build.gradle.kts  settings.gradle
php/: .gitignore  README.md  composer.json  ecs.yaml  phpstan.neon  phpunit.xml
python/: .gitignore  Dockerfile  README.md  discount_service.py  discount_strategies.py  main.py  model_objects.py  receipt.py  receipt_printer.py  requirements.txt  shopping_cart.py  teller.py  test_supermarket.py  texttest_fixture.py
python_pytest/: .gitignore  README.md  pytest.ini
ruby/: .gitignore  Gemfile  Guardfile  Rakefile  main.rb
src/: SupermarketReceipt.sln
typescript/: .gitignore  package-lock.json  package.json  tsconfig.json
(+551 files in other folders)
